--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "jest": "^27.5.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -29,7 +30,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
@@ -40,9 +41,17 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test -- --config jest.config.js",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{js,jsx}'"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "testMatch": [
+      "./__tests__/*.test.js"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -64,5 +73,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.3",
+    "babel-jest": "^29.5.0"
   }
 }
